tests/golden/compile-pass/expr_unary_bool.rua
fn unary_bool(n: i64) -> bool {
    -n < 0 && !false
}
