tests/golden/compile-fail/enum_unit_called.rua
enum State { Ready }

fn state() -> State {
    State::Ready()
}
